src/test/deca/context/valid/oracle/heritage.deca
class A {
    protected int x ;

    void setX(int x) {
        this.x = x ;
    }

    int getX() {
        return x ;
    }

    void init() {
        x = 0 ;
    }
}
class B extends A {
    int y ;

    void init() {
        setX(0) ;
        y = 0 ;
    }
}

class C extends A {
    int z ;
    void init() {
        setX(0) ;
        z = 1 ;
    }
}