src/test/deca/context/invalid/with-object/redefinition_method3.deca
class A{
    void x(){
        println("Hello World!");
    }
}

class B extends A{
    float x(){
        return 1.0;
    }
}